--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: gcfree1.galaxy-cloud.icu, port: 443, type: vmess, uuid: 99498865-751d-4889-8349-51301fa3d930, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /tDZcCqc, ws-headers: {Host: gcfree1.galaxy-cloud.icu}}
+  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.86MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.92MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
-  - {name: 🇨🇳 中国-3.43MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.74MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-2.06MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇨🇳 中国-366.9KB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12224, type: vmess, uuid: 9ea70d57-9cb6-3bd0-ae41-5601e516dcc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 18443, type: vmess, uuid: f736834f-1fc8-4738-9884-9afe0eb0d818, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.74MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.28MB/s(Youtube:不良林)
